Actions
Bug #9556
closedlogadm timestamps should not leak into the configfile
Start date:
2018-05-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
When using wildcard patterns in the configfile logadm will record the timestamps of all matched and rotated files in the timestamp file.
If the config file is then edited using logadm -w
or logadm -r
these timestamps can not be matched to existing rules in the configfile and will end up beeing written back into it.
This is confusing, especially when the patterns match many files and the configfile becomes huge.
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 80 to 100
git commit e911f24978ffe03577079badeef02cfc5e9aa296
commit e911f24978ffe03577079badeef02cfc5e9aa296 Author: Sebastian Wiedenroth <wiedi@frubar.net> Date: 2018-05-31T21:01:29.000Z 9556 logadm timestamps should not leak into the configfile Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Andy Fiddaman <af@citrus-it.net> Approved by: Robert Mustacchi <rm@joyent.com>
Actions